@@ -106,6 +106,7 @@ All (GUI):
 - Fix changing size of merged cells in wxGrid (Laurent Humbertclaude).
 - Fixed wrapping bug in wxRichTextCtrl when there were images present;
   now sets the cursor to the next line after pressing Shift+Enter.
+- Fix crash when reading malformed PCX images.
 
 All (Unix):
 
